feat: add trello and postman collection to readme

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <h1>Información sobre el Proyecto</h1>
-    <p> Trello: https://trello.com/ AGREGAR TRELLO </p>
-    <p> Postman collection:  AGREGAR COLLECTION</p>
+    <p> Trello: https://trello.com/b/pZo8TUIM/flow </p>
+    <p> Postman collection:  https://www.getpostman.com/collections/fb1e28ec09c44e4811f4</p>
     <p> Desarrollado sobre Node.js usando JavaScript.
         Se implementa una API que provee en formato JSON el estado del tiempo basado en
         diferentes endpoints.
